--- a/css/style.css
+++ b/css/style.css
@@ -434,7 +434,6 @@ img {
   align-items: baseline;
   padding: 0;
   margin: 0;
-  margin-bottom: 48px;
   list-style: none;
   text-align: center;
 }
@@ -825,6 +824,11 @@ img {
 /* Pagination */
 
 .pagination-list {
+  grid-column: 2 / -1;
+  margin: 0;
+  margin-top: 48px;
+  margin-right: 20px;
+  padding: 0;
   list-style: none;
   font-family: 'PT Sans', Arial, Helvetica, sans-serif;
   text-transform: uppercase;
@@ -859,7 +863,7 @@ img {
 /* Section category description */
 
 .category-descr {
-   margin-top: 123px;
+   grid-column: 1 / -1;
 }
 
 .category-descr p {
