--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,8 @@
   --basic-blue-light: #3D546F;
   --basic-gray: #C5C5C5;
 
+  --special-catalog-sort: #F7F3EC;
+  --special-catalog-title:#F2F6F8;
   --special-wrapper: #F9F5F0;
   --special-brand: #EAEAEA;
   --special-old-price: #A9A9A9;
@@ -99,7 +101,7 @@ img {
 
 /* Header */
 
-.main-header {
+.main-header {              
   min-height: 320px;
   background-color: var(--basic-whitesmoke);
 }
@@ -202,14 +204,17 @@ img {
   font-style: italic;
 }
 
-.header-section a {
+.header-contact a {
   color: var(--basic-red);
   font-size: 21px;
   line-height: 30px;
   font-weight: bold;
+  border-width: 3px;
+  border-style: solid;
+  border-color: var(--basic-white);
 }
 
-.header-section a:focus {
+.header-contact a:focus {
   text-decoration: underline;
 }
 
@@ -240,6 +245,10 @@ img {
 .user-navigation a:active {
   color: var(--basic-gray);
   text-decoration: none;
+}
+
+.user-login a {
+  background-color: rgba(0, 0, 0, 0.0001);
 }
 
 .user-navigation .user-name:hover {
@@ -306,8 +315,21 @@ img {
 
 /* Section categories */
 
+.categories {
+  margin-top: 59px;
+}
+
+.categories-list {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px;
+}
+
 .categories-list,
 .promo-list {
+  margin: 0;
+  margin-bottom: 20px;
+  padding: 0;
   color: var(--basic-white);
   list-style: none;
   font-size: 24px;
@@ -315,22 +337,31 @@ img {
   font-weight: bold;
 }
 
+.categories-item,
+.promo-item {
+  width: 300px;
+  height: 123px;
+}
+
 .categories-list .yellow {
   background-color: var(--special-yellow);
   background-image: url(../img/icon-1.svg);
   background-repeat: no-repeat;
+  background-position: 80% 50%;
 }
 
 .categories-list .blue {
   background-color: var(--special-blue);
   background-image: url(../img/icon-2.svg);
   background-repeat: no-repeat;
+  background-position: 80% 50%;
 }
 
 .categories-list .lilac {
   background-color: var(--special-lilac);
   background-image: url(../img/icon-3.svg);
   background-repeat: no-repeat;
+  background-position: 80% 50%;
 }
 
 .categories-item a,
@@ -361,12 +392,24 @@ img {
 
 /* Section promo */
 
+
+.promo {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+  margin-bottom: 59px;
+}
+
 .slider-list {
+  margin: 0;
+  padding: 0;
   color: var(--basic-white);
   list-style: none;
 }
 
 .slider-item {
+  width: 620px;
+  min-height: 266px;
   background-color: var(--basic-black);
 }
 
@@ -381,14 +424,32 @@ img {
 } 
 
 .slider-text {
+  padding-top: 23px;
+  padding-bottom: 16px;
+  padding-left: 24px;
   background-color: rgba(0, 0, 0, 0.25);
 }
 
 .slider-item h2 {
+  margin: 0;
+  margin-bottom: 5px;
   font-size: 36px;
   line-height: 36px;
   font-weight: bold;
   text-transform: uppercase;
+}
+
+.slider-item p {
+  margin: 0;
+}
+
+.slider-button {
+  display: block;
+  margin-top: 97px;
+  margin-left: 24px;
+  padding-top: 11px;
+  padding-bottom: 9px;
+  width: 192px; 
 }
 
 .slider .button-left {
@@ -403,49 +464,92 @@ img {
   border: none;
 }
 
+.promo-list {
+  margin: 0;
+}
+
 .promo-list .green {
   background-color: var(--special-greenlight);
   background-image: url(../img/icon-4.svg);
   background-repeat: no-repeat;
+  background-position: 80% 50%;
 }
 
 .promo-list .yellow {
+  margin-top: 20px;
   background-color: var(--special-yellow);
   background-image: url(../img/icon-5.svg);
   background-repeat: no-repeat;
+  background-position: 80% 50%;
 }
 
 /* Section popular product */
 
 .popular-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
   background-color: var(--special-wrapper);          
 }
 
 .popular-title {
+  margin: 0;
+  padding-top: 29px;
+  padding-bottom: 30px;
+  padding-left: 28px;
   color: var(--basic-darkgrey);
   font-size: 30px;
   line-height: 30px;
   text-transform: uppercase;
 }
 
+.popular-button {
+  margin-right: 14px;
+  padding-top: 11px;
+  padding-bottom: 9px;
+  padding-left: 24px;
+  padding-right: 24px;
+}
+
 .product-list {
   display: flex;
   flex-wrap: wrap;
-  align-items: baseline;
   padding: 0;
   margin: 0;
+  margin-bottom: 48px;
   list-style: none;
   text-align: center;
 }
 
 .product-item {
   width: 220px;
-  height: 318px;
+  min-height: 318px;
   margin-right: 20px;
-  margin-bottom: 18px;
+  margin-top: 18px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: var(--special-brand);
+  box-sizing: border-box;
 }
 
-.product-item:nth-child(3n) {
+.product-img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 170px;
+}
+
+.catalog .product-item:nth-child(3n) {
+  margin-right: 0;
+}
+
+.popular-product {
+  margin-bottom: 70px;
+}
+
+.popular-product .product-item:nth-child(4n) {
   margin-right: 0;
 }
 
@@ -453,15 +557,25 @@ img {
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
 }
 
-.product-item h3 {
-  margin-top: 28px;
-  margin-right: 17px;
+.product-title {
+  margin: 0;
+}
+
+.product-title a {
+  display: block;
+  margin-top: 9px;
   margin-bottom: 7px;
-  margin-left: 18px;
+  padding-right: 17px;
+  padding-left: 18px;
+  color: var(--basic-black);
   font-family: 'PT Sans', Arial, Helvetica, sans-serif;
   font-size: 18px;
   line-height: 20px;
   font-weight: bold;
+}
+
+.product-title a:focus {
+text-decoration: underline;
 }
 
 .product-item p {
@@ -534,6 +648,12 @@ img {
 /* Section popular brand */
 
 .popular-brand-list {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 20px;
+  margin: 0;
+  margin-bottom: 70px;
+  padding: 0;
   list-style: none;
 }
 
@@ -544,32 +664,55 @@ img {
   border-color: var( --special-brand);
 }
 
-.popular-brand-item:hover,
-.popular-brand-item:focus {
+.popular-brand-item a {
+  display: flex; 
+  justify-content: center;
+  align-items: center;
+  width: 220px;
+  height: 145px;
+}
+
+.popular-brand-item a:hover,
+.popular-brand-item a:focus {
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
 }
 
-.popular-brand-item:active {
+.popular-brand-item a:active {
   opacity: 0.5;
 }
 
 /* Section services */
 
 .services {
+  margin-bottom: 70px;
+  padding-top: 64px;
   background-color: var(--basic-grey);
 }
 
 .services p {
+  margin: 0;
   font-family: 'PT Sans', Arial, Helvetica, sans-serif;
   font-size: 13px;
   line-height: 24px;
 }
 
+.services-slider {
+  display: flex;
+}
+
 .services-controls {
+  margin: 0;
+  margin-top: 70px;
+  padding: 0;
   list-style: none;
 }
 
 .services-controls a {
+  display: block;
+  padding-top: 15px;
+  padding-bottom: 16px;
+  padding-left: 22px;
+  width: 240px;
   color: var(--basic-white);
   font-size: 21px;
   line-height: 30px;
@@ -588,11 +731,34 @@ img {
   background-color: var(--basic-white);
 }
 
+.services-controls .active {
+  pointer-events: none;
+  cursor: default;
+  color: var(--basic-darkgrey);
+  background-color: var(--basic-white);
+  box-shadow: none;
+}
+
 .services-list {
+  margin: 0;
+  margin-top: 67px;
+  margin-left: 80px;
+  padding: 0;
   list-style: none;
 }
 
+.services-item {
+  width: 619px;
+  min-height: 283px;
+}
+
+.services-item p {
+  width: 331px;
+}
+
 .services-title {
+  margin: 0;
+  margin-bottom: 30px;
   color: var(--basic-darkgrey);
   font-size: 30px;
   line-height: 30px;
@@ -602,22 +768,29 @@ img {
 .services-list .delivery {
   background-image: url(../img/delivery.png);
   background-repeat: no-repeat;
+  background-position: right bottom;
 }
 
 .services-list .guarantee {
   background-image: url(../img/guarantee.png);
   background-repeat: no-repeat;
+  background-position: right bottom;
 }
 
 .services-list .credit {
   background-image: url(../img/credit.png);
   background-repeat: no-repeat;
+  background-position: right bottom;
+}
+
+.services .button {
+  margin-top: 27px;
 }
 
 .section-wrapper {
   display: flex;
   justify-content: space-between;
-  margin-top: 70px;
+  margin-bottom: 70px;
 }
 
 /* Section about company */
@@ -628,6 +801,8 @@ img {
 }
 
 .title {
+  margin: 0;
+  margin-bottom: 24px;
   font-size: 30px;
   line-height: 30px;
   text-transform: uppercase;
@@ -693,24 +868,13 @@ img {
   margin-top: 25px;
 }
 
-.catalog-title {
-  margin: 0;
-  margin-top: 49px;
-  margin-bottom: 50px;
-  padding: 0;
-  color: var(--basic-darkgrey);
-  font-size: 30px;
-  line-height: 30px;
-  text-transform: uppercase;
-}
-
 /* Breadcrumbs */
 
 .breadcrumbs-list {
   display: flex;
   margin: 0;
-  padding: 0;
   margin-top: 21px;
+  padding: 0;
   list-style: none;
 }
 
@@ -722,12 +886,35 @@ img {
   text-transform: uppercase;
 }
 
+.catalog-title {
+  margin: 0;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding: 30px;
+  color: var(--basic-darkgrey);
+  font-size: 30px;
+  line-height: 30px;
+  text-transform: uppercase;
+  background-color: var(--special-catalog-title);
+}
+
 /* Filter */
 
 .filters {
+  margin-top: 5px;
   width: 220px;
   font-family: 'PT Sans', Arial, Helvetica, sans-serif;
   text-transform: uppercase;
+}
+
+.filters span {
+  padding-top: 10px;
+  padding-right: 151px;
+  padding-bottom: 10px;
+  padding-left: 18px;
+  font-size: 13px;
+  line-height: 18px;
+  background-color: var(--special-catalog-sort);
 }
 
 .filter fieldset {
@@ -773,10 +960,13 @@ img {
   margin-bottom: 28px;
   font-family: 'PT Sans', Arial, Helvetica, sans-serif;
   text-transform: uppercase;
+  background-color: var(--special-catalog-sort);
 }
 
-.sorting span, 
-.filters span {
+.sorting span {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 19px;
   font-size: 13px;
   line-height: 18px;
 }
@@ -825,9 +1015,10 @@ img {
 
 .pagination-list {
   grid-column: 2 / -1;
+  display: flex;
   margin: 0;
-  margin-top: 48px;
-  margin-right: 20px;
+  margin-bottom: 59px;
+  margin-left: 20px;
   padding: 0;
   list-style: none;
   font-family: 'PT Sans', Arial, Helvetica, sans-serif;
@@ -835,12 +1026,22 @@ img {
 }
 
 .pagination-list a {
+  margin-right: 10px;
+  padding-top: 10px;
+  padding-right: 15px;
+  padding-bottom: 10px;
+  padding-left: 15px;
   color: var(--basic-black);
   font-size: 13px;
   line-height: 18px;
   border-width: 1px;
   border-style: solid;
   border-color: var(--special-pagination);
+}
+
+.pagination-list .pagination-button {
+  padding-right: 31px;
+  padding-left: 32px;
 }
 
 .pagination-list a:hover {
@@ -855,18 +1056,27 @@ img {
   border-color: var(--basic-red);
 }
 
-.pagination-list .active {
+.pagination-list .active,
+.pagination-list .active:hover {
   color: var(--basic-white);
   background-color: var(--basic-red);
+  border: none;
 }
 
 /* Section category description */
 
 .category-descr {
-   grid-column: 1 / -1;
+  padding-top: 64px;
+  padding-bottom: 68px;
+  background-color: var(--basic-grey);
+}
+
+.category-descr .title {
+  margin-bottom: 25px;
 }
 
 .category-descr p {
+  margin: 0;
   font-family: 'PT Sans', Arial, Helvetica, sans-serif;
   font-size: 13px;
   line-height: 24px;
@@ -875,7 +1085,6 @@ img {
 /* Footer */
 
 .main-footer {
-  margin-top: 70px;
   background-color: var(--basic-darkgrey);
 }
 
