--- a/css/style.css
+++ b/css/style.css
@@ -140,7 +140,7 @@ input[type="radio"].visually-hidden  {
   padding-top: 9px;
   padding-bottom: 9px;
   padding-left: 42px;
-  width: 271px;
+  width: 270px;
   color: var(--basic-black);
   line-height: 24px;
   background-color: inherit;
@@ -200,11 +200,11 @@ input[type="radio"].visually-hidden  {
 .header-bookmark,
 .header-cart {
   position: relative;
+  width: 150px;
 }
 
 .header-bookmark a {
   padding-top: 9px;
-  padding-right: 24px;
   padding-bottom: 9px;
   padding-left: 43px;
 }
@@ -228,7 +228,6 @@ input[type="radio"].visually-hidden  {
 
 .header-cart a {
   padding-top: 9px;
-  padding-right: 26px;
   padding-bottom: 9px;
   padding-left: 49px;
 }
@@ -250,8 +249,8 @@ input[type="radio"].visually-hidden  {
   opacity: 1;
 }
 
-.active-cart a {
-  padding-right: 21px;
+.active-cart,
+.active-bookmark {
   background-color: var(--basic-red);
 }
 
@@ -384,6 +383,18 @@ input[type="radio"].visually-hidden  {
   background-position: 0 0;
 }
 
+.user-login-link:hover::before {
+  background-image: url(../img/icon-login-hover.svg);
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+
+.user-login-link:active::before {
+  background-image: url(../img/icon-login.svg);
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+
 .user-login-register {
   padding-top: 12px;
   padding-right: 24px;
@@ -426,12 +437,12 @@ background-position: 0 0;
   background-image: url(../img/icon-user-hover.svg);
   background-repeat: no-repeat;
   background-position: 0 0;
-  }
+}
 
 .user-navigation-logout:active {
   background-image: url(../img/icon-user.svg);
   background-repeat: no-repeat;
-background-position: 0 0;
+  background-position: 0 0;
 }
 
 .user-navigation-logout {
@@ -684,19 +695,15 @@ background-position: 0 0;
 
 .slider-controls-radio {
   position: absolute;
-  left: 297px;
-  bottom: 29px;
+  left: 293px;
+  bottom: 31px;
 } 
 
-.slider-controls-radio input[type=radio] {
-  display: none;
-}
-
-.slider-controls-radio label {
-  display: inline-block;
-  margin-right: 4px;
-  width: 6px;
-  height: 6px;
+.slider-controls-radio button {
+  width: 10px;
+  height: 10px;
+  margin-left: 4px;
+  padding: 0;
   border-width: 2px;
   border-style: solid;  
   border-color: var(--basic-white);
@@ -831,8 +838,6 @@ background-position: 0 0;
   width: 100%;
   height: 165px;
 }
-
-
 
 .catalog .product-item:nth-child(3n) {
   margin-right: 0;
@@ -1702,6 +1707,7 @@ text-decoration: underline;
 .pagination-list {
   grid-column: 2 / -1;
   display: flex;
+  flex-wrap: wrap;
   margin: 0;
   margin-bottom: 67px;
   margin-left: 20px;
@@ -1792,6 +1798,7 @@ text-decoration: underline;
 }
 
 .footer-contacts p {
+  width: 325px;
   margin: 0;
   margin-bottom: 54px;
   margin-left: 2px;
@@ -1808,6 +1815,7 @@ text-decoration: underline;
 
 .footer-navigation-link {
   display: flex;
+  flex-wrap: wrap;
   justify-content: flex-end;
   margin: 0;
   margin-top: 37px;
@@ -1868,6 +1876,7 @@ text-decoration: underline;
 
 .social-list {
   display: flex;
+  flex-wrap: wrap;
   margin: 0;
   margin-top: 35px;
   margin-left: 91px;
@@ -1924,30 +1933,74 @@ text-decoration: underline;
   line-height: 18px;
 }
 
-/* Modal popup */
+/* Modal */
 
-.popup-map {
-  display: none;
-}
-
-.popup-feedback {
-
-  position: relative;
-  margin: 0 auto;
-  padding-top: 39px;
-  width: 620px;
+.modal {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
   border-top-width: 7px;
   border-top-style: solid;
   border-top-color: var(--basic-red);
+  background-color: var(--basic-white);
+  z-index: 10;
+}
+
+/* Modal close */
+
+.modal-close {
+  position: absolute;
+  top: 13px;
+  right: 11px;
+  width: 21px;
+  height: 21px;
+  background-color: transparent;
+  background-image: url(../img/icon-close.svg);
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  border: none;
+  cursor: pointer;
+}
+
+/* Modal map */
+
+.modal-map {
+  display: none;
+  top: auto;
+  bottom: 52px;
+  width: 943px;
+  height: 449px;
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
+}
+
+.modal-map img {
+  display: block;
+  height: 449px;
+}
+
+/* Modal feedback */
+
+.modal-feedback {
+  display: none;
+  top: auto;
+  bottom: 52px;
+  width: 620px;
+  padding-top: 39px;
+  border-top-width: 7px;
+  border-top-style: solid;
+  border-top-color: var(--basic-red);
+  box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.75); 
 }
 
 .form-feedback {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin: 0 auto;
   width: 460px;
-  
+  margin: 0 auto;
 }
 
 .item-feedback {
@@ -1956,13 +2009,13 @@ text-decoration: underline;
 
 .item-feedback label {
   display: block;
-  margin-bottom: 11px;
+  margin-bottom: 9px;
 }
 
 .item-feedback input {
   margin-bottom: 13px;
   padding-top: 7px;
-  padding-right: 44px;
+  padding-right: 52px;
   padding-bottom: 5px;
   padding-left: 12px;
   border-width: 2px;
@@ -1976,7 +2029,7 @@ text-decoration: underline;
 }
 
 .item-feedback textarea {
-  padding-top: 7px;
+  padding-top: 10px;
   padding-right: 12px;
   padding-bottom: 7px;
   padding-left: 12px;
@@ -1992,32 +2045,25 @@ text-decoration: underline;
   color: var(--special-old-price);
 }
 
-.popup-feedback-button {
+.modal-feedback-button {
   margin-top: 30px;
   padding-top: 37px;
   padding-bottom: 37px;
   background-color: #F4F4F4;
 }
 
-.button-send {
-  padding-top: 11px;
-  padding-right: 200px;
-  padding-bottom: 9px;
-  padding-left: 199px;
-}
+/* Modal cart */
 
-.popup-notify {
-
-  position: relative;
-  margin: 0 auto;
-  padding-top: 66px;
+.modal-notify {
+  display: none;
+  top: 158px;
+  bottom: auto;
   width: 620px;
-  border-top-width: 7px;
-  border-top-style: solid;
-  border-top-color: var(--basic-red);
+  padding-top: 66px;
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15); 
 }
 
-.popup-notify p {
+.modal-notify p {
   position: relative;
   margin: 0;
   margin-bottom: 68px;
@@ -2027,7 +2073,7 @@ text-decoration: underline;
   text-align: center;
 }
 
-.popup-notify p::before {
+.modal-notify p::before {
   content: "";
   position: absolute;
   top: -18px;
@@ -2039,14 +2085,14 @@ text-decoration: underline;
   background-position: 0 0;
 }
 
-.popup-notify-link {
+.modal-notify-link {
   padding-top: 43px;
-  padding-bottom: 43px;
+  padding-bottom: 44px;
   background-color: #F1F1F1;
   text-align: center;
 }
 
-.popup-notify-link a {
+.modal-notify-link a {
   padding-top: 11px;
   padding-bottom: 9px;
 }
@@ -2062,17 +2108,4 @@ text-decoration: underline;
   padding-left: 32px;
   color: var(--basic-black);
   background-color: var(--basic-white);
-}
-
-.button-close {
-  position: absolute;
-  top: 11px;
-  right: 11px;
-  width: 21px;
-  height: 21px;
-  background-color: var(--basic-white);
-  background-image: url(../img/icon-close.svg);
-  background-repeat: no-repeat;
-  background-position: 0 0;
-  border: none;
 }
